[gd_scene load_steps=16 format=3 uid="uid://dq1vsa5w8gn5o"]

[ext_resource type="Script" path="res://mobs/slime/slime.gd" id="1_a1gr5"]
[ext_resource type="Texture2D" uid="uid://cweghpj2grbqa" path="res://mobs/slime/sprites/1.png" id="1_hppst"]
[ext_resource type="Texture2D" uid="uid://dsyvrbpxbdhli" path="res://mobs/slime/sprites/Slime2.png" id="2_0qsba"]
[ext_resource type="Texture2D" uid="uid://dajsnavfjtykx" path="res://mobs/slime/sprites/Walk/2.png" id="2_481ba"]
[ext_resource type="Texture2D" uid="uid://38jq4dy2ahsk" path="res://mobs/slime/sprites/Walk/3.png" id="3_l7a5k"]
[ext_resource type="Texture2D" uid="uid://bacphwxvqeels" path="res://mobs/slime/sprites/Slime.png" id="3_ppaf7"]
[ext_resource type="Texture2D" uid="uid://cx1xpmrw4bomh" path="res://mobs/slime/sprites/Walk/4.png" id="4_mpmaj"]
[ext_resource type="PackedScene" uid="uid://cqy2kaeptmwos" path="res://ui/health_bar.tscn" id="6_701h3"]
[ext_resource type="AudioStream" uid="uid://dvoimlqy5ksac" path="res://mobs/slime/cartoon-splat-6086.mp3" id="9_rof1a"]
[ext_resource type="AudioStream" uid="uid://bsh11m3q35tb7" path="res://mobs/slime/cartoon-splat-310479.mp3" id="10_mg0h6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p86m6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0qsba")
}, {
"duration": 1.0,
"texture": ExtResource("3_ppaf7")
}, {
"duration": 1.0,
"texture": ExtResource("2_0qsba")
}, {
"duration": 1.0,
"texture": ExtResource("3_ppaf7")
}],
"loop": true,
"name": &"hit",
"speed": 4.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("1_hppst")
}, {
"duration": 1.0,
"texture": ExtResource("2_481ba")
}, {
"duration": 1.0,
"texture": ExtResource("3_l7a5k")
}, {
"duration": 3.0,
"texture": ExtResource("4_mpmaj")
}, {
"duration": 1.0,
"texture": ExtResource("3_l7a5k")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_hppst")
}, {
"duration": 1.0,
"texture": ExtResource("2_481ba")
}, {
"duration": 1.0,
"texture": ExtResource("3_l7a5k")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jhmru"]
radius = 7.71609

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5hek"]
bg_color = Color(0.946077, 0.37846, 0.502969, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xiy3v"]
size = Vector2(13.8318, 14.7751)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qtcqg"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="Slime" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_a1gr5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_p86m6")
animation = &"hit"
offset = Vector2(0, -20)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(7.13335, 6.66891)
shape = SubResource("CircleShape2D_jhmru")

[node name="HealthBar" parent="." instance=ExtResource("6_701h3")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -85.0
offset_right = 100.0
offset_bottom = -73.0
theme_override_styles/fill = SubResource("StyleBoxFlat_h5hek")
show_percentage = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1.90735e-06)
scale = Vector2(7.13335, 6.66891)
shape = SubResource("RectangleShape2D_xiy3v")
debug_color = Color(0.983669, 0, 0.350869, 0.42)

[node name="Label" type="Label" parent="."]
offset_left = -23.0
offset_top = -125.0
offset_right = 23.0
offset_bottom = -97.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 20
text = "2000"

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_rof1a")
volume_db = -7.428

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_mg0h6")
volume_db = -7.428

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qtcqg")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
